Closed
Bug 1615462
Opened 5 years ago
Closed 5 years ago
VRParent.cpp: missing unistd include for getpid
Categories
(Core :: WebVR, defect)
Tracking
()
RESOLVED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox75 | --- | fixed |
People
(Reporter: val, Assigned: val)
Details
Attachments
(1 file)
0:21.92 In file included from Unified_cpp_gfx_vr0.cpp:92:
0:21.92 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/vr/ipc/VRParent.cpp:97:56: error: use of undeclared ident
ifier 'getpid'
0:21.92 nsPrintfCString processName("VR (pid %u)", (unsigned)getpid());
needs a <unistd.h>
include, at least on FreeBSD
Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → greg
Pushed by ncsoregi@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e56d978c54fa
fix missing unistd include for getpid in gfx/vr/ipc/VRParent r=kip
Comment 3•5 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in
before you can comment on or make changes to this bug.
Description
•