Bug 1615462 - fix missing unistd include for getpid in gfx/vr/ipc/VRParent r=kip

Differential Revision: https://phabricator.services.mozilla.com/D62840

--HG--
extra : moz-landing-system : lando